spacing bug

--- a/public/dark-theme.css
+++ b/public/dark-theme.css
@@ -31,10 +31,6 @@ form+div span {
   border-width: 1px !important;
 }
 
-form+div {
-  margin-top: 10px;
-}
-
 .ant-radio-button-wrapper-checked {
   border-color: white !important;
   border-width: 2px !important;
